gobmkida/c0/stones_on_board
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3130:6: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
if ( stones_on_board_stone_count_for_position != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3132:1: error: use of undeclared identifier 'stones_on_board_white_stones'
stones_on_board_white_stones = 0; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3133:1: error: use of undeclared identifier 'stones_on_board_black_stones'
stones_on_board_black_stones = 0; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3138:3: error: use of undeclared identifier 'stones_on_board_white_stones'
++stones_on_board_white_stones; 
  ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3142:3: error: use of undeclared identifier 'stones_on_board_black_stones'
++stones_on_board_black_stones; 
  ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3145:1: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
stones_on_board_stone_count_for_position = position_number; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3148:6: error: use of undeclared identifier 'stones_on_board_black_stones'
v3 = stones_on_board_black_stones; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/engine/board.c:3152:6: error: use of undeclared identifier 'stones_on_board_white_stones'
v2 = stones_on_board_white_stones; 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/stones_on_board/src/obj/1/board.o] Error 1
